Also patch Stream.toList in KBuckets (API 34)
An independent review of the fork diff found one call the first sweep
missed: KBuckets.getNodeRecordBuckets() used Stream.toList (Android
API 34, not D8-backported). It is reachable through the public
DiscoverySystem.getNodeRecordBuckets(), so the fork's standalone
completeness claim was wrong with it in — even though desugar_jdk_libs
2.1.5 config covers toList for consumers that enable it.
collect(Collectors.toList()) is behavior-identical here (the extra
mutability of the returned list is unobservable to callers).

Also corrects the README preamble: six patched methods (not "four
APIs"), the precise first-crash site (first liveness confirmation or
first offer to a full bucket, not literally the first touch), and a
self-contained dexdump verification recipe.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>